some more cleanup